--- a/frontend/account.html
+++ b/frontend/account.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Rooms - HotelBooking</title>
+  <title>My Account</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- Navbar -->
   <nav class="navbar">
     <a href="index.html" class="logo">HotelBooking</a>
     <div class="nav-links">
@@ -18,26 +17,19 @@
     </div>
   </nav>
 
-  <!-- Main Content -->
   <main class="container">
-    <h1 id="hotel-name">Available Rooms</h1>
-    <div id="rooms" class="card-container">
-      
-      <!-- JS will load rooms here -->
-    </div>
+    <h1>My Bookings</h1>
+    <div id="booking-list" class="card-container"></div>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 HotelBooking. All rights reserved.</p>
   </footer>
-
-<script type="module" src="./js/config.js"></script>
+  <script type="module" src="./js/config.js"></script>
 <script type="module" src="./js/api.js"></script>
 <script type="module" src="./js/user.js"></script>
 <script type="module" src="./js/main.js"></script>
-<script type="module" src="./js/rooms.js"></script>
-  
+  <script type="module" src="./js/account.js"></script>
  
 </body>
 </html>
