--- a/frontend/booked.html
+++ b/frontend/booked.html
@@ -9,37 +9,53 @@
   <nav class="navbar">
     <a href="index.html" class="logo">HotelBooking</a>
     <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="login.html">Login</a>
-      <a href="register.html">Register</a>
+      <span id="user-info"></span>
+      <a href="login.html" id="login-link">Login</a>
+      <a href="register.html" id="register-link">Register</a>
+      <a href="account.html" id="account-link" style="display:none;">My Account</a>
+      <button id="logout-btn" style="display:none;">Logout</button>
     </div>
   </nav>
 
-  <main>
-    <h1>Book Your Room</h1>
-    <div id="room-info" class="room-card">
-      <h2 id="room-name"></h2>
-      <p id="room-price"></p>
+  <main class="container booking-container">
+    <h1>Booking Details</h1>
+
+    <div id="booking-info" class="room-card">
+      <h3 id="room-name"></h3>
+      <p>Price per night: <span id="room-price">$0</span></p>
     </div>
+
     <div class="booking-form">
-      <label for="guest-name">Guest Name:</label>
-      <input type="text" id="guest-name" placeholder="Your name" required>
-
-      <label for="guest-phone">Phone:</label>
-      <input type="text" id="guest-phone" placeholder="Your phone number" required>
-
-      <label for="check-in">Check-in:</label>
-      <input type="date" id="check-in" required>
-
-      <label for="check-out">Check-out:</label>
-      <input type="date" id="check-out" required>
-
-      <p>Total Price: <span id="total-price">$0</span></p>
+      <label>
+        Guest Name:
+        <input type="text" id="guest-name" placeholder="Your Name">
+      </label>
+      <label>
+        Phone:
+        <input type="text" id="guest-phone" placeholder="+995 5XX XXX XXX">
+      </label>
+      <label>
+        Check-in:
+        <input type="date" id="check-in">
+      </label>
+      <label>
+        Check-out:
+        <input type="date" id="check-out">
+      </label>
+      <p>Total price: <span id="total-price">$0</span></p>
 
       <button id="book-btn">Book Now</button>
     </div>
   </main>
 
-  <script type="module" src="js/booked.js"></script>
+  <footer>
+    <p>&copy; 2025 HotelBooking. All rights reserved.</p>
+  </footer>
+ <script type="module" src="./js/config.js"></script>
+<script type="module" src="./js/api.js"></script>
+<script type="module" src="./js/user.js"></script>
+<script type="module" src="./js/main.js"></script>
+<script type="module" src="./js/booked.js"></script>
+ 
 </body>
 </html>
