--- a/frontend/hotels.html
+++ b/frontend/hotels.html
@@ -1,9 +1,14 @@
 <body>
-  <nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="login.html">Login</a>
-    <a href="register.html">Register</a>
-  </nav>
+<nav class="navbar">
+  <a href="index.html" class="logo">HotelBooking</a>
+  <div class="nav-links">
+    <span id="user-info"></span>
+    <a href="login.html" id="login-link">Login</a>
+    <a href="register.html" id="register-link">Register</a>
+    <a href="account.html" id="account-link" style="display:none;">My Account</a>
+    <button id="logout-btn" style="display:none;">Logout</button>
+  </div>
+</nav>
 
   <header>
     <h1>Our Hotels</h1>
@@ -17,6 +22,14 @@
   <main>
     <div id="hotels" class="card-container"></div>
   </main>
-
-  <script type="module" src="js/hotels.js"></script>
+   <footer>
+    <p>&copy; 2025 HotelBooking. All rights reserved.</p>
+  </footer>
+ 
+  <script type="module" src="./js/config.js"></script>
+<script type="module" src="./js/api.js"></script>
+<script type="module" src="./js/user.js"></script>
+<script type="module" src="./js/main.js"></script>
+<script type="module" src="./js/rooms.js"></script>
+<script type="module" src="./js/hotels.js"></script>
 </body>
