--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,28 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hotel Booking</title>
+  <title>HotelBooking</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Navbar -->
   <nav class="navbar">
-    <div><a href="index.html">Home</a></div>
-    <div>
-      <a href="login.html">Login</a>
-      <a href="register.html">Register</a>
+    <a href="index.html" class="logo">HotelBooking</a>
+    <div class="nav-links">
+      <span id="user-info"></span>
+      <a href="login.html" id="login-link">Login</a>
+      <a href="register.html" id="register-link">Register</a>
+      <a href="account.html" id="account-link" style="display:none;">My Account</a>
+      <button id="logout-btn" style="display:none;">Logout</button>
     </div>
   </nav>
 
-  <div class="container">
-    <div class="filter">
-      <input type="text" id="city-filter" placeholder="Filter by city">
-      <button id="filter-btn">Filter</button>
-      <button id="reset-btn">Reset</button>
+  <!-- Main Content -->
+  <main class="container">
+    <h1>Hotels</h1>
+    <div class="filters">
+      <input type="text" id="city-filter" placeholder="City">
+      <button id="filter-btn">Search</button>
     </div>
+    <div id="hotels" class="card-container">
+      <!-- Hotel cards loaded dynamically via JS -->
+    </div>
+  </main>
 
-    <div id="hotels" class="card-container"></div>
-  </div>
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 HotelBooking. All rights reserved.</p>
+  </footer>
 
-  <script type="module" src="js/main.js"></script>
+ 
+<script type="module" src="./js/config.js"></script>
+<script type="module" src="./js/api.js"></script>
+<script type="module" src="./js/user.js"></script>
+<script type="module" src="./js/main.js"></script>
+<script type="module" src="./js/hotels.js"></script>
+  
 </body>
 </html>
