--- a/frontend/register.html
+++ b/frontend/register.html
@@ -2,22 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Register</title>
+  <title>Register - HotelBooking</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Navbar -->
   <nav class="navbar">
-    <div><a href="index.html">Home</a></div>
+    <a href="index.html" class="logo">HotelBooking</a>
+    <div class="nav-links">
+      <span id="user-info"></span>
+      <a href="login.html" id="login-link">Login</a>
+      <a href="register.html" id="register-link">Register</a>
+      <a href="account.html" id="account-link" style="display:none;">My Account</a>
+      <button id="logout-btn" style="display:none;">Logout</button>
+    </div>
   </nav>
 
-  <form id="register-form">
-    <h2>Register</h2>
-    <input type="text" id="username" placeholder="Username" required>
-    <input type="email" id="email" placeholder="Email" required>
-    <input type="password" id="password" placeholder="Password" required>
-    <button type="submit">Register</button>
-  </form>
+  <!-- Registration Form -->
+  <main class="container">
+    <form id="register-form" class="auth-form">
+      <h2>Register</h2>
+      <input type="text" id="username" placeholder="Username" required>
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="submit">Register</button>
+    </form>
+  </main>
 
-  <script type="module" src="js/register.js"></script>
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 HotelBooking. All rights reserved.</p>
+  </footer>
+
+  <!-- Scripts -->
+  <script type="module" src="./js/config.js"></script>
+<script type="module" src="./js/api.js"></script>
+<script type="module" src="./js/user.js"></script>
+<script type="module" src="./js/main.js"></script>
+<script type="module" src="./js/rooms.js"></script>
+  <script type="module" src=".js/register.js"></script>
+ 
 </body>
 </html>
