--- a/frontend/rooms.html
+++ b/frontend/rooms.html
@@ -18,7 +18,20 @@
     </div>
   </nav>
 
-  <!-- Main Content -->
+  <div class="filters">
+  <input type="text" id="city-filter" placeholder="City">
+  <input type="number" id="max-price-filter" placeholder="Max Price">
+  <select id="room-type-filter">
+    <option value="">All Types</option>
+    <option value="single">Single</option>
+    <option value="double">Double</option>
+    <option value="deluxe">Deluxe</option>
+    <option value="suite">Suite</option>
+    <option value="family">Family</option>
+  </select>
+  <button id="filter-btn">Search</button>
+  <button id="reset-btn">Reset</button>
+</div>
   <main class="container">
     <h1 id="hotel-name">Available Rooms</h1>
     <div id="rooms" class="card-container">
