--- a/frontend/register.html
+++ b/frontend/register.html
@@ -40,7 +40,7 @@
 <script type="module" src="./js/user.js"></script>
 <script type="module" src="./js/main.js"></script>
 <script type="module" src="./js/rooms.js"></script>
-  <script type="module" src=".js/register.js"></script>
+<script type="module" src="./js/register.js"></script>
  
 </body>
 </html>
