--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>HotelBooking</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
   <!-- Navbar -->
