--- a/frontend/modify-booking.html
+++ b/frontend/modify-booking.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Modify Booking - HotelBooking</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
   <!-- Navbar -->
