--- a/frontend/register.html
+++ b/frontend/register.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Register - HotelBooking</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body>
   <!-- Navbar -->
